--- a/Sign-In.html
+++ b/Sign-In.html
@@ -176,7 +176,7 @@ if (pwd.test(password.value))
 	 
   <li class="nav-item">
   <br>
-    <a class="nav-link"  href="christuniversity.html"><i class="fa fa-home"> HOME</i></a>
+    <a class="nav-link"  href="index.html"><i class="fa fa-home"> HOME</i></a>
   </li>
   <br>
   <li class="nav-item"><br>
@@ -255,7 +255,7 @@ if (pwd.test(password.value))
       </div>
       <div class="modal-body">
 	  
-        <form action="christuniversity.html">
+        <form action="index.html">
 		<div class="mb-3">
             <label for="recipient-name" class="col-form-label">Name:</label>
             <input type="email" class="form-control" id="name1" readonly>
