--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 	
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <title>CHRIST</title>
-	<script src="index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+	 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 </head>
 <style>
+.section1{background:#add8e6;opacity:1;}
+h2
+{color:#467db4;
+font-weight:bold;
+font-size:30px;
+font-family:Serif;
+}
 a
 {
 color:#467db4;
@@ -33,11 +38,21 @@ background:#467db4;
 border-radius:25px;
 }
 
+
+
+
 img{padding-right:30px;}
 body{background:#467db4;}
-video{opacity:0.5;margin-top:0;}
+video{opacity:0.5;margin-top:0; object-fit:cover;width:100vw; height:100vh; position:fixed;}
+
+
+
 </style>
 <body >
+
+
+
+
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     
@@ -53,7 +68,7 @@ video{opacity:0.5;margin-top:0;}
   </li>
   <br>
   <li class="nav-item"><br>
-    <a class="nav-link" href="Sign-In.html"><i class="fas fa-user"> Sign-In</i></a>
+    <a class="nav-link" href="Sign-in.html"><i class="fas fa-user"> Sign-In</i></a>
   </li>
   
   
@@ -61,12 +76,17 @@ video{opacity:0.5;margin-top:0;}
     
   </div>
 </nav>
-<center>
-<video width="800" height="500" autoplay muted loop>
+
+<video autoplay muted loop id="bgvid">
   <source src="https://christuniversity.in/uploads/banners/770563177_2020-09-08_12-07-39.mp4" type="video/mp4">
  </video>
-<div class="footer">
-  
-</div>
+
+
+
+
+
+
+
+
 </body>
 </html>
