--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ video{opacity:0.5;margin-top:0; object-fit:cover;width:100vw; height:100vh; posi
   </li>
   <br>
   <li class="nav-item"><br>
-    <a class="nav-link" href="Sign-In.html"><i class="fas fa-user"> Sign-In</i></a>
+    <a class="nav-link" href="Sign-In.html"><i class="fas fa-user"> Sign-Up</i></a>
   </li>
   
   
